--- a/modulework/main/build.gradle
+++ b/modulework/main/build.gradle
@@ -7,10 +7,12 @@ if (cfg.isDebug) {
     apply plugin: 'com.android.application'
     apply plugin: 'kotlin-android'
     apply plugin: 'kotlin-kapt'
+    apply plugin: 'kotlin-android-extensions'
 } else {
     apply plugin: 'com.android.library'
     apply plugin: 'kotlin-android'
     apply plugin: 'kotlin-kapt'
+    apply plugin: 'kotlin-android-extensions'
 }
 
 android {
