--- a/modulework/login/build.gradle
+++ b/modulework/login/build.gradle
@@ -60,6 +60,9 @@ android {
             }
         }
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -69,4 +72,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //databinding
+    kapt "com.android.databinding:compiler:2.1.3"
+    //viewmodel
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    kapt "android.arch.lifecycle:compiler:1.1.1"
 }
